example/test_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    role: db
spec:
  containers:
  - name: test-pod
    image: quay.io/quay/busybox:latest
    imagePullPolicy: Always
    ports:
    command: ["/bin/sh", "-c", "trap : TERM INT; sleep infinity & wait"]
  restartPolicy: Never
