example/test-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.244.0.0/16
            except:
              - 10.244.1.0/24
        - podSelector:
            matchLabels:
              role: frontend
      ports:
        - protocol: TCP
          port: 6379
  egress:
    - to:
        - ipBlock:
            cidr: 10.0.0.0/24
      ports:
        - protocol: TCP
          port: 5978

---
apiVersion: v1
kind: Pod
metadata:
  name: policy-test-pod
  labels:
    role: db
spec:
  containers:
  - name: policy-test-pod
    image: busybox
    command:
    - sleep
    - "3600"

---
apiVersion: v1
kind: Pod
metadata:
  name: policy-test-pod-2
  labels:
    role: frontend
spec:
  containers:
  - name: policy-test-pod-2
    image: busybox
    command:
    - sleep
    - "3600"
